--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -62,3 +62,44 @@
     }
   }
 }
+
+.footer {
+  width: 100%;
+  display: flex;
+  border-top: 1px solid rgb(215, 215, 215, 0.1);
+  margin-top: 3.75rem;
+  padding-top: 3rem;
+  align-items: space-between;
+  justify-content: space-between;
+  @media (max-width: 50rem) {
+    flex-direction: column;
+    justify-content: center;
+    .previous {
+      margin-bottom: 1rem;
+      padding-bottom: 1rem;
+      border-bottom: 1px solid rgb(215, 215, 215, 0.1);
+    }
+  }
+  .previous,
+  .next {
+    display: flex;
+    cursor: pointer;
+    flex-direction: column;
+    margin-bottom: 1.5rem;
+    margin:  0 1rem 1rem;
+    span {
+      font-size: 1.125rem;
+      margin-bottom: 0.5rem;
+      max-width: 18.75rem;
+    }
+    a {
+      color: var(--pink-500);
+      font-weight: 600;
+    }
+    transition: filter 0.2s;
+
+    &:hover {
+      filter: brightness(0.8);
+    }
+  }
+}
