--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -3,3 +3,16 @@
   margin: 0 auto;
   padding: 0 2rem;
 }
+.previewPrismic {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--background);
+  font-weight: 600;
+  width: 100%;
+  height: 3.625rem;
+  background-color: var(--heading);
+  border-radius: 0.25rem;
+  margin-bottom: 5rem;
+  margin-top: 5rem;
+}
